--- a/testeapi/pom.xml
+++ b/testeapi/pom.xml
@@ -7,6 +7,14 @@
     <groupId>br.com.teste</groupId>
     <artifactId>testeapi</artifactId>
     <version>1.0-SNAPSHOT</version>
+     <dependencies>
+        <!-- Dependência do Gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
